[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
axum-extra = { version = "0.3.7", features = ["spa"] }
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
hyper = { version = "0.14.20", default-features = false }
tower = "0.4.13"
rustls = { version = "0.20.7" }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
icalendar = "0.13.3"
chrono = "0.4"
chrono-tz = "0.8"
geodate = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elasticsearch = { version = "8.5.0-alpha.1", default-features = false, features = ["rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }